<resources>
    <string name="app_name">E-commerce</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_more">More</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="login">LOG IN</string>
    <string name="log_out">Log Out</string>
    <string name="emailH">Enter Email</string>
    <string name="passH">Enter Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="name">Enter Name</string>
    <string name="signUp_text">create a new account</string>
    <string name="signUp_button">Sign Up</string>
    <string name="forget_password">Forget Password</string>
    <string name="send_email">Send Email</string>
    <string name="forget_text">Enter the email address you used to create your account and we will email you a link to reset your password</string>
    <string name="signUp_t">By creating an account, you agree to our </string>
    <string name="terms">Terms of Service </string>
    <string name="privacy"> Privacy Policy</string>

    <string name="action_settings">Settings</string>
    <string name="all_my_order">All My Orders</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="shipped_orders">Shipped Orders</string>
    <string name="confirmed_orders">Confirmed Orders</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="my_address">My Address</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="rate_us">Rate Us</string>
    <string name="give_us_feedback">Give Us Feedback</string>
    <string name="customer_support">Customer Support</string>
    <string name="remember_me">Remember Me</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_category_activty">Category</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="you_must_sign_in">you must sign in</string>
    <string name="search_bar">What are you looking for ?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="checkout">CHECKOUT</string>
    <string name="plus_shipping">Plus shipping</string>
    <string name="total">Total</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="choose_address">Choose Another Address</string>
    <string name="place_order">Place Order</string>
    <string name="on_cash_delivery">On Cash Delivery</string>
    <string name="credit_card">Credit Card</string>

</resources>