<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_96px"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/profile_96px"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/shopping_cart_96px"
        android:title="@string/title_cart" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_100px"
        android:title="@string/title_search"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/more_100px"
        android:title="@string/title_more" />

</menu>