<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="sigunup"
            type="com.relabs.e_commerce.viewmodel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/old_gray"
        tools:context=".ui.activity.SignUpActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/signUp_text"
            android:textColor="#515C6F"
            android:textSize="@dimen/_35sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginTop="32dp"
            android:elevation="@dimen/_25sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="13dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/profile_96px" />

                    <EditText
                        android:id="@+id/editTextTextPersonName_SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/blackTextColor"
                        android:textColorHint="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_3sdp"

                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/email_100px" />

                    <EditText
                        android:id="@+id/editTextTextEmailAddress_SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/emailH"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/blackTextColor"
                        android:textColorHint="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView5_SignUp"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_3sdp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/password_50px" />

                    <EditText
                        android:id="@+id/editTextTextPassword_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/passH"
                        android:inputType="textPassword"
                        android:padding="@dimen/_3sdp"
                        android:textColor="@color/blackTextColor"
                        android:textColorHint="@color/blackTextColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView7_SignUp"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_3sdp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/password_50px" />

                    <EditText
                        android:id="@+id/editTextTextPassword_confirmation_SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/confirm_pass"
                        android:inputType="textPassword"
                        android:padding="@dimen/_3sdp"
                        android:textColor="@color/blackTextColor"
                        android:textColorHint="@color/blackTextColor" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/signUp_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_border"
            android:drawableEnd="@drawable/next_page_50px"
            android:text="@string/signUp_button"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/signUp_t"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
                android:paddingEnd="@dimen/_2sdp"
                android:text="@string/terms"
                android:textColor="#FF5050" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" and  " />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/privacy"
                android:textColor="#FF5050" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
